spec/data/mockDefs/invalid/return/mockDefInvalidExport.js
module.exports = function () {
  return ['not a valid endpoint definition'];
};
